<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saat_core</name>
  <version>1.0.0</version>
  <description>
    Core ROS2 nodes for the SAAT automated pear sorting and packing system.
    Implements classical CV vision pipeline, PID speed control, servo actuation,
    IoT publishing, and local SQLite database.
  </description>

  <maintainer email="saat@team.local">SAAT Team</maintainer>
  <license>MIT</license>

  <!-- Build toolchain -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Custom messages from our companion package -->
  <depend>saat_interfaces</depend>

  <!-- Python libraries (declared for rosdep awareness) -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
